feat(v2.9): 国产中间件适配 + AI Agent 技能 + README 重构
- 国产中间件: StandardContext 类名兼容 6 种（TongWeb/BES/InforSuite/Apusic/Primeton）
- docs/AGENT-SKILL.md: AI Agent 技能引导（双程序架构约束/使用流程/陷阱）
- README 瘦身: 技术研究移主页引用，docs/USAGE.md + docs/RULES.md 拆分
- 回归: Tomcat 靶场 HIGH 命中不变